--- a/internal/assets/manifests/istio-discovery/templates/configmap.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/configmap.yaml
@@ -17,6 +17,7 @@
       image:
         imageType: {{. | quote}}
       {{- end }}
+      {{- if ne .Values.global.proxy.tracer "" }}
       tracing:
       {{- if eq .Values.global.proxy.tracer "lightstep" }}
         lightstep:
@@ -53,6 +54,9 @@
       {{- else if eq .Values.global.proxy.tracer "openCensusAgent" }}
       {{/* Fill in openCensusAgent configuration from meshConfig so it isn't overwritten below */}}
 {{ toYaml $.Values.meshConfig.defaultConfig.tracing | indent 8 }}
+      {{- end }}
+      {{- else }}
+      tracing: {}
       {{- end }}
       {{- if .Values.global.remotePilotAddress }}
       {{- if not .Values.global.externalIstiod }}
