--- a/internal/components/discovery/testdata/icp-test-cr.yaml
+++ b/internal/components/discovery/testdata/icp-test-cr.yaml
@@ -176,6 +176,7 @@ spec:
     excludeIPRanges: ""
     excludeInboundPorts: ""
     excludeOutboundPorts: ""
+    tracer: "zipkin"
   proxyInit:
     cni:
       enabled: true
